# giant-isopod

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOGFOOD.md  GitVersion.yml  LICENSE  README.md  SECURITY.md  Taskfile.yml  cliff.toml  repomix.config.json
.agent/: install_skills.py
.agent/rules/: use-memory.md
.agent/skills/: .gitignore  install_skills.py  skills.json
.config/: dotnet-tools.json
.github/agents/: agentic-workflows.agent.md
.github/aw/: actions-lock.json
.github/workflows/: auto-merge-copilot.yml  pr-review-resolver.lock.yml  pr-review-resolver.md
docs/: memory-sidecar.md  test-coverage-analysis.md
docs/_inbox/: HANDOVER-actor-agent-improvements.md  HANDOVER-gh-aw-pr-review.md  HANDOVER-memory-retrieval.md  HANDOVER-swarm-enhancements.md  HANDOVER-tree-sitter-chunking.md  INVESTIGATION-indexer-performance.md  architecture-discussion.md  discussion-001.md
docs/decisions/: 001-skill-based-tooling.md  002-task-graph-dag.md  003-three-layer-memory.md  004-market-first-coordination.md  005-budgets-everywhere.md  006-runtime-model-profile.md  (+7 more)
memory-sidecar/: pyproject.toml
memory-sidecar/src/memory_sidecar/: __init__.py  chunking.py  cli.py  config.py  embed.py  storage.py
memory-sidecar/src/memory_sidecar/flows/: __init__.py  codebase.py  documents.py  episodic.py  knowledge.py
memory-sidecar/tests/: test_chunking.py  test_codebase.py  test_config.py  test_documents.py  test_storage.py
project/: .editorconfig  GiantIsopod.sln
ruff/: ruff.toml
(+234 files in other folders)
