[project]
name = "memory-sidecar"
version = "0.1.0"
description = "Embedded memory sidecar for giant-isopod: CocoIndex + FastEmbed + Tree-sitter + SQLite"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "fastembed>=0.5",
    "sqlite-vec>=0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
memory-sidecar = "memory_sidecar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_sidecar"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "S", "A", "C4", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["memory_sidecar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
